Fix color contrast for default status label

--- a/styles/_status-label.scss
+++ b/styles/_status-label.scss
@@ -1,7 +1,7 @@
 /***** Status labels *****/
 /* Styles labels used in posts, articles and requests */
 .status-label {
-  background-color: #1eb848;
+  background-color: #038153;
   border-radius: 4px;
   color: #fff;
   font-size: 12px;
